atualização das páginas do site

--- a/Site/index.html
+++ b/Site/index.html
@@ -26,9 +26,9 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <button>Login</button>
+                <a href="./login.html">Login</a>
                 |
-                <button>Sign-up</button>
+                <a href="./cadastro.html">Sign-up</a>
             </div>
         </div>
     </div>
@@ -36,19 +36,22 @@
     <div class="banner">
         <div class="container">
             <p>
-                <img src="./imagens/2.png" alt="" style="height: 250px;">
+                <img src="./imagens/2.png" alt="" style="height: 70px;">
             </p>
         </div>
     </div>
-
     <div class="box1">
         <div class="galeria">
-            <img src="./imagens/kdj1.jpeg" alt="" style="height: 450px;">
+                <img src="./imagens/kdj1.jpeg" alt="" style="height: 450px;">
         </div>
             <div class="intro">
             <h3>Guia Inicial ao mundo de ORV</h3>
             <img src="./imagens/line.png" alt="" style="height:25px;">
-            <p>É uma novel escrita por Sing-Shong, uma dupla de escritores. Contada a partir da perspectiva de Kim Dokja, trabalhador de 28 anos que passou a última década de sua vida obcecado por uma web novel, chamada “Três Maneiras de Sobreviver a um Apocalipse”, que se encontra em uma condição de usar seu alto conhecimento da web novel para sobreviver ao Apocalipse, que acabou se tornando realidade logo após ele finalizar o último capítulo.</p>
+            <p>"Omniscient Reader's Viewpoint" (ORV), é uma novel escrita por Sing-Shong, uma dupla de escritores. 
+                Contada a partir da perspectiva de Kim Dokja, trabalhador de 28 anos que passou a última década de sua vida
+                obcecado por uma web novel, chamada “Três Maneiras de Sobreviver a um Apocalipse”, que se encontra em uma 
+                condição de usar seu alto conhecimento da web novel para sobreviver ao Apocalipse, que acabou se tornando 
+                realidade logo após ele finalizar o último capítulo.</p>
         </div>
     </div>  
     
