--- a/Site/login.html
+++ b/Site/login.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dokkaebi Central</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
-</body>
-</html>
+
+    <div class="navbar">
+
+        <div class="navbarLeft">
+            <img src="./imagens/1.png" alt="" style="height: 50px;">
+            <h3>Dokkaebi Central</h3>
+        </div>
+
+        <div class="navbarMiddle">
+            <a href="./index.html">Home</a>
+            <a href="./sobreORV.html">Sobre ORV</a>
+        </div>
+
+            <!-- login e cadastro -->
+
+            <div class="navbarRight">
+                <a href="./login.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Login</a>
+                |
+                <a href="./cadastro.html">Sign-up</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="banner">
+        <div style="display: flex; justify-content: center; align-items: center; height: 100px;">
+            <img src="./imagens/2.png" alt="" style="width: 200px;">
+        </div>
+        <div class="container-Login-Signup">
+            <div class="loginBox">
+                <div>
+                    <img src="./imagens/YJH-chibi.jpeg" alt="" style="height: 300px;">
+                </div>
+                <div>
+                    <h1>Login</h1>
+                    <input type="text" id="iptUsuario" placeholder="Usuário">
+                    <br>
+                    <input type="text" id="iptEmail" placeholder="Email">
+                    <br>
+                    <input type="password" id="iptSenha" placeholder="Senha">
+                    <br>
+                    <button>Entrar</button>
+                    <p>Não possui uma conta? <a href="./cadastro.html" style="text-decoration: underline;">Cadastre-se!</a></p>
+                </div>
+                <div>
+                    <img src="./imagens/KDJ-chibi.jpeg" alt="" style="height: 300px;">
+                </div>
+            </div>
+        </div>
+    </div>
