--- a/Site/sobreORV.html
+++ b/Site/sobreORV.html
@@ -28,17 +28,117 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <button>Login</button>
+                <a href="./login.html">Login</a>
                 |
-                <button>Sign-up</button>
+                <a href="./cadastro.html">Sign-up</a>
             </div>
         </div>
     </div>
 
     <div class="banner">
-        <div class="container">
-            <p>
-                <img src="./imagens/2.png" alt="" style="height: 250px;">
-            </p>
+        <div class="container-sobreORV">
+        </div>
+    </div>
+
+        <div class="mainTextBox">
+            <div class="mainText">
+            <div>
+            <h3 style="display: flex; justify-content: center;">Sobre o mundo de ORV</h3>
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.
+            </div>
+        </div>
+
+        <div class="textBoxes">
+            <div class="subTexts">  
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Incarnações</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+                <!-- ----------------------------- -->
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Constelações</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+                <!-- ----------------------------- -->
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Dokkaebis</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+            </div>
+            <div class="subTexts">
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Demônios</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+                <!-- ----------------------------- -->
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Deuses de Fora</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+                <!-- ----------------------------- -->
+                <div class="subTextsBox">
+                    <h3 style="display: flex; justify-content: center;">Nébulas</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; justify-content: center;">
+        <img src="./imagens/personagens-devider.png" alt="" style="width: 1400px;">
+    </div>
+
+    <div>
+        <div class="imageBoxes">
+            <div class="imageBox">
+                <div class="imageContent">
+                <img src="./imagens/IMG-persos/KDJ.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/YJH.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/HSY.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+        </div>
+        <div class="imageBoxes">
+            <div class="imageBox">
+                <div class="imageContent">
+                <img src="./imagens/IMG-persos/LHS.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                <img src="./imagens/IMG-persos/JHW.jpg" alt="" style="height: 400px;">    
+                </div>            
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/YSG.jpg" alt="" style="height: 400px;">              
+                </div>
+            </div>
+        </div>
+        <div class="imageBoxes">
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/LJH.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/SYS.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
+            <div class="imageBox">
+                <div class="imageContent">
+                    <img src="./imagens/IMG-persos/LGY.jpg" alt="" style="height: 400px;">
+                </div>
+            </div>
         </div>
     </div>
