atualizando site html/css

--- a/Site/index.html
+++ b/Site/index.html
@@ -35,14 +35,21 @@
 
     <div class="banner">
         <div class="container">
-            <p>
-                <img src="./imagens/2.png" alt="" style="height: 70px;">
-            </p>
+                <img src="./imagens/DC-whitelogo.png" alt="" style="height: 90px;">
         </div>
     </div>
     <div class="box1">
         <div class="galeria">
-                <img src="./imagens/kdj1.jpeg" alt="" style="height: 450px;">
+            <div data-text="Yoo Joonghyuk" style="--r:-15;" class="galeriaBox">
+                <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 330px;">
+              </div>
+              <div data-text="Kim Dokja" style="--r:5;" class="galeriaBox">
+                <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 330px;">
+            
+              </div>
+              <div data-text="Han Sooyoung" style="--r:25;" class="galeriaBox">
+                <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 330px;">
+              </div>
         </div>
             <div class="intro">
             <h3>Guia Inicial ao mundo de ORV</h3>
