--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -36,7 +36,7 @@
 
     <div class="banner">
         <div style="display: flex; justify-content: center; align-items: center; height: 100px;">
-            <img src="./imagens/2.png" alt="" style="width: 200px;">
+            <img src="./imagens/DC-whitelogo.png" alt="" style="width: 200px;">
         </div>
         <div class="container-Login-Signup">
             <div class="cadastroBox">
