--- a/Site/login.html
+++ b/Site/login.html
@@ -23,7 +23,7 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Login</a>
+                <a href="./login.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Sign-in</a>
                 |
                 <a href="./cadastro.html">Sign-up</a>
             </div>
