--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -27,7 +27,7 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html">Login</a>
+                <a href="./login.html">Sign-in</a>
                 |
                 <a href="./cadastro.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Sign-up</a>
             </div>
@@ -53,7 +53,7 @@
                     <div class="inputsCadastro">
                     <input type="date" id="iptDtNasc" placeholder="Data de Nascimento">
                     <select name="PF" id="selectPF">
-                        <option value="">Personagem Favorito</option>
+                        <option value="#">Personagem Favorito</option>
                         <option value="KDJ">Kim Dokja</option>
                         <option value="YJH">Yoo Joonghyuk</option>
                         <option value="HSY">Han Sooyoung</option>
@@ -65,7 +65,7 @@
                         <option value="LGY">Lee Gilyoung</option>
                     </select>
                     <select name="AF" id="selectAF">
-                        <option value="">Arco Favorito</option>
+                        <option value="#">Arco Favorito</option>
                         <option value="1">Chegada dos Novatos</option>
                         <option value="2">Domínio da Guerra</option>
                         <option value="3">Grande Guerra de Estrelas</option>
