--- a/Site/sobreORV.html
+++ b/Site/sobreORV.html
@@ -27,7 +27,7 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html">Login</a>
+                <a href="./login.html">Sign-in</a>
                 |
                 <a href="./cadastro.html">Sign-up</a>
             </div>
