atualizando CSS do site

--- a/Site/index.html
+++ b/Site/index.html
@@ -40,14 +40,14 @@
     </div>
     <div class="box1">
         <div class="galeria">
-            <div data-text="Yoo Joonghyuk" style="--r:-15;" class="galeriaBox">
+            <div style="--r:-15;" class="galeriaBox">
                 <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 330px;">
               </div>
-              <div data-text="Kim Dokja" style="--r:5;" class="galeriaBox">
+              <div style="--r:5;" class="galeriaBox">
                 <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 330px;">
             
               </div>
-              <div data-text="Han Sooyoung" style="--r:25;" class="galeriaBox">
+              <div style="--r:25;" class="galeriaBox">
                 <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 330px;">
               </div>
         </div>
@@ -61,6 +61,16 @@
                 realidade logo após ele finalizar o último capítulo.</p>
         </div>
     </div>  
-    
+
+    <div class="banner2">
+        <div class="content">
+            <div>
+                <h2>Sobre</h2>
+                <p>Dokkaebi Central tem como principal objetivo atrair leitores e não leitores ao mundo inovador de ORV, podendo eles explorar um pouco da estória antes de lê-la, abrindo a possibilidade de analisar os personagens, a estória e um pouco a arte oficial tanto da web-novel quanto do manhwa (que ainda está em produção). ORV trás ao leitor desde lições de vida, enfrentamento de mudanças abruptas, encarar os erros do passado, ter uma visão da linha da sua vida, até algo simples como empatia.</p>
+            </div>
+        </div>
+        <div class="bannerContainer">
+        </div>
+    </div>
 </body>
 </html>
