--- a/Site/sobreORV.html
+++ b/Site/sobreORV.html
@@ -37,6 +37,7 @@
     <div class="viewSobreORV">
         <div class="banner">
             <div class="container-sobreORV">
+                <h1 id="meow">「 There are three ways to survive in a ruined world. Now, I have forgotten a few, but one thing is certain. <br> The fact that you who are reading this now will survive.  」</h1>
             </div>
         </div>
             
