--- a/Site/index.html
+++ b/Site/index.html
@@ -65,11 +65,22 @@
     <div class="banner2">
         <div class="content">
             <div>
-                <h2>Sobre</h2>
+                <h2>Sobre Dokkaebi Central</h2>
                 <p>Dokkaebi Central tem como principal objetivo atrair leitores e não leitores ao mundo inovador de ORV, podendo eles explorar um pouco da estória antes de lê-la, abrindo a possibilidade de analisar os personagens, a estória e um pouco a arte oficial tanto da web-novel quanto do manhwa (que ainda está em produção). ORV trás ao leitor desde lições de vida, enfrentamento de mudanças abruptas, encarar os erros do passado, ter uma visão da linha da sua vida, até algo simples como empatia.</p>
             </div>
         </div>
         <div class="bannerContainer">
+        </div>
+    </div>
+
+    <div>
+        <div>
+            <h1>
+                Sobre Mim
+            </h1>
+        </div>
+        <div>
+            <img src="./imagens/imgSobreMim.jpeg" alt="" style="width: 300px;">
         </div>
     </div>
 </body>
