--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -44,16 +44,18 @@
             <div class="mainTextBox">
                 <div class="mainText">
                 <div>
-                <h3 style="display: flex; justify-content: center;">Sobre o mundo de ORV</h3>
+                <h2 style="display: flex; justify-content: center;">Sobre o que a história se trata?</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam animi placeat voluptatem neque, tempore nemo sequi quo fuga ad sit unde assumenda esse ab. Repudiandae nobis eligendi ea quas necessitatibus.</p>
+                <p>A Web Novel “Omniscient Reader’s Viewpoint” (na tradução literal “Visão do Leitor Onisciente”) entretanto, foi um marco no gênero de Isekai Reverso. ORV é uma web novel escrita por Sing-Shong, contada a partir da perspectiva de Kim Dokja, trabalhador de 28 anos que passou a última década de sua vida obcecado por uma Web Novel chamada “Três Maneiras de Sobreviver a um Apocalipse”, que se encontra em uma condição de usar seu alto conhecimento para sobreviver ao mesmo apocalipse, que veio a se tornar realidade após Dokja finalizar a Web Novel que lia. 
+                    <br><br>
+                Ao longo de sua jornada, Kim Dokja se encontra enfrentando diversos desafios, tanto físicos quanto psicológicos. O foco principal da novel é relatar a vivência de um leitor dentro a história que ele leu, explorando a relação que o protagonista de ORV (Omniscient Reader’s Viewpoint), Kim Dokja, possui com o protagonista de TWSA(Três Maneiras de Sobreviver a um Apocalipse), Yoo Joonghyuk e com a escritora de TWSA, Han Sooyoung. Eles conhecem muito sobre o mundo apocalíptico que vivem, sendo um deles, respectivamente, um leitor, um regressor (aquele que volta ao início quanto encontra o fim da vida) e a própria criadora do mundo que veio a se tornar realidade. </p>
                 </div>
             </div>
     
             <div class="textBoxes">
                 <div class="subTexts">  
                     <div class="subTextsBox">
-                        <h3 style="display: flex; justify-content: center;">Incarnações</h3>
+                        <h3 style="display: flex; justify-content: center;">Encarnações</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sapiente veritatis, provident et exercitationem doloribus, rem ullam repellendus minus, earum quo delectus corporis eaque cumque beatae autem minima facilis illo!</p>
                     </div>
                     <!-- ----------------------------- -->
