--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
             </h1>
         </div>
         <div>
-            <img src="./imagens/imgSobreMim.jpeg" alt="" style="width: 300px;">
+            <img src="./imagens/imgSobreMim.png" alt="" style="width: 300px;">
         </div>
     </div>
 </body>
