mudando o css do site + adicionando Sobre Mim

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -137,7 +137,7 @@
 
           
       
-          // Enviando o valor da nova input
+          // Enviando o valor da nova input -> API
           fetch("/usuarios/cadastrar", {
             method: "POST",
             headers: {
@@ -146,11 +146,12 @@
             body: JSON.stringify({
               // crie um atributo que recebe o valor recuperado aqui
               // Agora vá para o arquivo routes/usuario.js
-              nomeServer: nomeVar,
+              usuarioServer: usuarioVar,
               emailServer: emailVar,
               senhaServer: senhaVar,
-              idEmpresaVincularServer: idEmpresaVincular,
-              cpfServer: cpfVar
+              dtNascServer: dtNascVar,
+              persoFavServer: persoFavVar,
+              arcoFavServer: arcoFavVar
             }),
           })
             .then(function (resposta) {
