--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokkaebi Central</title>
     <link rel="stylesheet" href="./style.css">
+    
 </head>
 <body>
 
@@ -42,15 +43,15 @@
 
             <div class="galeria">
                 <div style="--r:-15;" class="galeriaBox">
-                <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 330px;">
+                <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 400px;">
                 </div>
 
                 <div style="--r:5;" class="galeriaBox">
-                <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 330px;">
+                <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 400px;">
                 </div>
 
                 <div style="--r:25;" class="galeriaBox">
-                <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 330px;">
+                <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 400px;">
                 </div>
             </div>
 
@@ -76,15 +77,48 @@
         </div>
     </div>
 
-    <div>
+    <div class="boxImpacto">
+        <div class="boxImpactoTexto">
+            <h2>Impacto</h2>
+            <div>
+                <h3>Por que e como ORV impacta na Educação de Qualidade?</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias vitae earum eligendi distinctio? Necessitatibus, laudantium distinctio sunt consequatur provident commodi perspiciatis minima cum aliquam qui nostrum libero id, fugiat debitis!</p>
+            </div>
+            <div>
+                <img src="./imagens/educaçãoODS.png" alt="ODS-Educação-de-Qualidade" style="border-radius: 20px; width: 120px;">
+            </div>
+        </div>
+        <div class="boxImpactoImg">
+            <img src="./imagens/KDJflower.png" alt="" style="width: 700px; border-radius: 20px;">
+        </div>
+    </div>
+
+<div class="boxSobre">
+    <div class="boxSobreImg">
         <div>
             <h1>
                 Sobre Mim
             </h1>
         </div>
         <div>
-            <img src="./imagens/imgSobreMim.png" alt="" style="width: 300px;">
+            <img src="./imagens/sobreMimImg.png" alt="" style="width: 300px; border-radius: 50%;">
         </div>
     </div>
+    <div class="boxSobreTexto">
+        <div>
+            <p>
+                Meu nome é Gabriella, tenho 19 anos e estudo na SPTech, atualmente cursando Ciência da Computação! Fiz esse site baseado na minha Web Novel favorita, “Omniscient Reader’s Viewpoint”. Ela teve uma influência muito grande na minha vida, tanto a história quanto os próprios personagens. 
+            </p>
+        </div>
+        <div class="boxIcons">
+            <a href="https://github.com/gabi-lodi">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z"/></svg>
+            </a>
+            <a href="gaboobiesemail@gmail.com">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
