cadastro API - check

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokkaebi Central</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     
 </head>
 <body>
@@ -18,10 +18,11 @@
 
             <div class="navbarMiddle">
                 <div style="display: flex; align-items: center;">
-                <b><a href="./index.html" style="text-decoration: underline;">Home</a></b>
-                <img src="./imagens/star.png" alt="" style="height: 20px;">
+                    <b><a href="./index.html" style="text-decoration: underline;">Home</a></b>
+                    <img src="./imagens/star.png" alt="" style="height: 20px;">
                 </div>
-                <a href="./sobreORV.html">Sobre ORV</a>
+                    <a href="./sobreORV.html">Sobre ORV</a>
+                    <a href="./blog.html">Feed</a>
             </div>
 
             <!-- login e cadastro -->
@@ -32,7 +33,6 @@
                 <a href="./cadastro.html">Sign-up</a>
             </div>
         </div>
-    </div>
 
     <div class="banner">
         <div class="container">
@@ -43,15 +43,15 @@
 
             <div class="galeria">
                 <div style="--r:-15;" class="galeriaBox">
-                <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 400px;">
+                <img src="./imagens/gallery/YJHgallery.jpg" alt="" style="height: 350px;">
                 </div>
 
                 <div style="--r:5;" class="galeriaBox">
-                <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 400px;">
+                <img src="./imagens/gallery/KDJgallery.jpg" alt="" style="height: 350px;">
                 </div>
 
                 <div style="--r:25;" class="galeriaBox">
-                <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 400px;">
+                <img src="./imagens/gallery/HSYgallery.jpg" alt="" style="height: 350px;">
                 </div>
             </div>
 
@@ -67,8 +67,7 @@
     </div>  
 
     <div class="banner2">
-        <div class="content">
-            <div>
+            <div class="content">
                 <h2>Sobre Dokkaebi Central</h2>
                 <p>Dokkaebi Central tem como principal objetivo atrair leitores e não leitores ao mundo inovador de ORV, podendo eles explorar um pouco da estória antes de lê-la, abrindo a possibilidade de analisar os personagens, a estória e um pouco a arte oficial tanto da web-novel quanto do manhwa (que ainda está em produção). ORV trás ao leitor desde lições de vida, enfrentamento de mudanças abruptas, encarar os erros do passado, ter uma visão da linha da sua vida, até algo simples como empatia.</p>
             </div>
