--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokkaebi Central</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -22,6 +22,7 @@
                 <b><a href="./sobreORV.html" style="text-decoration: underline;">Sobre ORV</a></b>
                 <img src="./imagens/star.png" alt="" style="height: 20px;">
                 </div>
+                <a href="./blog.html">Feed</a>
             </div>
 
             <!-- login e cadastro -->
