--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dokkaebi Central</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script src="./js/sessao.js"></script>
 </head>
 <body>
 
@@ -18,6 +20,7 @@
         <div class="navbarMiddle">
             <a href="./index.html">Home</a>
             <a href="./sobreORV.html">Sobre ORV</a>
+            <a href="./blog.html">Feed</a>
         </div>
 
             <!-- login e cadastro -->
@@ -57,8 +60,6 @@
         </div>
     </div>
     <script>
-
-
         function entrar() {
             aguardar();
     
