teste script login

--- a/public/dashboard/conta.html
+++ b/public/dashboard/conta.html
@@ -11,25 +11,28 @@
     <div class="navbar">
 
         <div class="navbarLeft">
-            <img src="./imagens/1.png" alt="" style="height: 50px;">
+            <img src="./../imagens/1.png" alt="" style="height: 50px;">
             <h3>Dokkaebi Central</h3>
         </div>
 
         <div class="navbarMiddle">
-            <a href="./../index.html">Home</a>
-            <a href="./../sobreORV.html">Sobre ORV</a>
-            <a href="./../blog.html">Feed</a>
+            <a href="./contaBlog.html">Feed</a>
+            <a href="./contaHome.html">Home</a>
+            <a href="./starSystem.html">Star System</a>
         </div>
         
         <div class="navbarRight">
             <div style="display: flex; align-items: center;">
-                <b><a href="./conta.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Conta</a></b>
-                <img src="./imagens/star.png" alt="" style="height: 20px;">
+                <b><a href="./conta.html" style="text-decoration: underline;">Conta</a></b>
+                <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./../imagens/avatar-svgrepo-com.png" alt="" style="width: 40px;">
             </div>
         </div>
+    </div>
+    <div>
+
     </div>
 
     <div class="banner">
