--- a/public/dashboard/conta.html
+++ b/public/dashboard/conta.html
@@ -43,9 +43,64 @@
     </div>
         <div class="box1">
 
-    <div>
-        <canvas id="myChart"></canvas>
+<div class="contaBox">
+  <div>
+      <canvas id="myChart"></canvas>
+  </div>
+  <div class="CBbox">
+    <div class="checkboxBox">
+
+      <div>
+        <div class="checkbox">
+          Arco 1: <br> Chegada dos Novatos <br> <input type="checkbox">
+        </div>
+      </div>
+
+      <div>
+        <div class="checkbox">
+          Arco 2: <br> Chegada dos Novatos <br> <input type="checkbox">
+        </div>
+      </div>
+
     </div>
+
+    <div class="checkboxBox">
+
+      <div class="checkbox">
+        Arco 3: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+
+      <div class="checkbox">
+        Arco 4: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+
+    </div>
+
+    <div class="checkboxBox">
+
+      <div class="checkbox">
+        Arco 5: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+
+      <div class="checkbox">
+        Arco 6: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+
+    </div>
+
+    <div class="checkboxBox">
+
+      <div class="checkbox">
+        Arco 7: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+
+      <div class="checkbox">
+        Arco 8: <br> Chegada dos Novatos <br> <input type="checkbox">
+      </div>
+      
+    </div>
+  </div>
+</div>
     
 </body>
 </html>
