--- a/public/dashboard/conta.html
+++ b/public/dashboard/conta.html
@@ -62,13 +62,15 @@
       <div class="checkboxBox">
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 1: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 1: <br> Chegada dos Novatos <br> (1-26) <br> <input type="checkbox" onclick="status1()" id="checkbox1" class="CHKbox">
+            <br> <div id="divStatusLeitura" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
   
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 2: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 2: <br> Domínio da Guerra <br> (27-50) <br> <input type="checkbox" onclick="status2()" id="checkbox2" class="CHKbox">
+            <br> <div id="divStatusLeitura2" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
   
@@ -78,29 +80,15 @@
 
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 3: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 3: <br> Grande Guerra de Estrelas <br> (51-100) <br> <input type="checkbox" onclick="status3()" id="checkbox3" class="CHKbox">
+            <br> <div id="divStatusLeitura3" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
   
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 4: <br> Chegada dos Novatos <br> <input type="checkbox">
-          </div>
-        </div>
-  
-      </div>
-  
-      <div class="checkboxBox">
-  
-        <div class="checkboxDiv">
-          <div class="checkbox">
-            Arco 5: <br> Chegada dos Novatos <br> <input type="checkbox">
-          </div>
-        </div>
-  
-        <div class="checkboxDiv">
-          <div class="checkbox">
-            Arco 6: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 4: <br> Guerra Civil de Seul <br> (101-190) <br> <input type="checkbox" onclick="status4()" id="checkbox4" class="CHKbox">
+            <br> <div id="divStatusLeitura4" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
   
@@ -110,13 +98,33 @@
   
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 7: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 5: <br> Candidatos à Transcendência<br>(191-260) <br> <input type="checkbox" onclick="status5()" id="checkbox5" class="CHKbox">
+            <br> <div id="divStatusLeitura5" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
   
         <div class="checkboxDiv">
           <div class="checkbox">
-            Arco 8: <br> Chegada dos Novatos <br> <input type="checkbox">
+            Arco 6: <br> Novo Mundo <br> (261-348) <br> <input type="checkbox" onclick="status6()" id="checkbox6" class="CHKbox">
+            <br> <div id="divStatusLeitura6" style="opacity: 50%;">Incompleto</div>
+          </div>
+        </div>
+  
+      </div>
+  
+      <div class="checkboxBox">
+  
+        <div class="checkboxDiv">
+          <div class="checkbox">
+            Arco 7: <br> Cenário Final<br> (349-452) <br> <input type="checkbox" onclick="status7()" id="checkbox7" class="CHKbox">
+            <br> <div id="divStatusLeitura7" style="opacity: 50%;">Incompleto</div>
+          </div>
+        </div>
+  
+        <div class="checkboxDiv">
+          <div class="checkbox">
+            Arco 8: <br> Epilogo<br> (453-551) <br> <input type="checkbox" onclick="status8()" id="checkbox8" class="CHKbox">
+            <br> <div id="divStatusLeitura8" style="opacity: 50%;">Incompleto</div>
           </div>
         </div>
         
@@ -129,6 +137,78 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
 <script>
+
+    function status1(){
+      var checkboxValue = document.getElementById('checkbox1');
+      if(checkboxValue.checked == false){
+        divStatusLeitura.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura.innerHTML = 'Completo'
+      }
+    }
+
+    function status2(){
+      var checkboxValue = document.getElementById('checkbox2');
+      if(checkboxValue.checked == false){
+        divStatusLeitura2.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura2.innerHTML = 'Completo'
+      }
+    }
+
+    function status3(){
+      var checkboxValue = document.getElementById('checkbox3');
+      if(checkboxValue.checked == false){
+        divStatusLeitura3.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura3.innerHTML = 'Completo'
+      }
+    }
+
+    function status4(){
+      var checkboxValue = document.getElementById('checkbox4');
+      if(checkboxValue.checked == false){
+        divStatusLeitura4.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura4.innerHTML = 'Completo'
+      }
+    }
+
+    function status5(){
+      var checkboxValue = document.getElementById('checkbox5');
+      if(checkboxValue.checked == false){
+        divStatusLeitura5.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura5.innerHTML = 'Completo'
+      }
+    }
+
+    function status6(){
+      var checkboxValue = document.getElementById('checkbox6');
+      if(checkboxValue.checked == false){
+        divStatusLeitura6.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura6.innerHTML = 'Completo'
+      }
+    }
+
+    function status7(){
+      var checkboxValue = document.getElementById('checkbox7');
+      if(checkboxValue.checked == false){
+        divStatusLeitura7.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura7.innerHTML = 'Completo'
+      }
+    }
+
+    function status8(){
+      var checkboxValue = document.getElementById('checkbox8');
+      if(checkboxValue.checked == false){
+        divStatusLeitura8.innerHTML = 'Incompleto'
+      } else {
+        divStatusLeitura8.innerHTML = 'Completo'
+      }
+    }
 
     divMensagem.innerHTML = 'Insira o número do Capítulo que você está'
 
