atualizando pagina inicial

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -29,9 +29,9 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html">Sign-in</a>
+                <a href="./login.html">Login</a>
                 |
-                <a href="./cadastro.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Sign-up</a>
+                <a href="./cadastro.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Cadastro</a>
             </div>
         </div>
     </div>
