--- a/public/blog.html
+++ b/public/blog.html
@@ -27,8 +27,8 @@
         </div>
         
         <div class="navbarRight">
-            <a href="./login.html">Sign-in</a>
+            <a href="./login.html">Login</a>
             |
-            <a href="./cadastro.html">Sign-up</a>
+            <a href="./cadastro.html">Cadastro</a>
         </div>
     </div>
