--- a/public/login.html
+++ b/public/login.html
@@ -26,9 +26,9 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Sign-in</a>
+                <a href="./login.html" style="background-color: rgb(157, 157, 157); color: white; text-decoration: underline;">Login</a>
                 |
-                <a href="./cadastro.html">Sign-up</a>
+                <a href="./cadastro.html">Cadastro</a>
             </div>
         </div>
     </div>
