--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -28,9 +28,9 @@
             <!-- login e cadastro -->
 
             <div class="navbarRight">
-                <a href="./login.html">Sign-in</a>
+                <a href="./login.html">Login</a>
                 |
-                <a href="./cadastro.html">Sign-up</a>
+                <a href="./cadastro.html">Cadastro</a>
             </div>
         </div>
     </div>
