--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -38,7 +38,7 @@
     <div class="viewSobreORV">
         <div class="banner">
             <div class="container-sobreORV">
-                <h1 id="meow">「 There are three ways to survive in a ruined world. Now, I have forgotten a few, but one thing is certain. <br> The fact that you who are reading this now will survive.  」</h1>
+                <h1 id="meow">「 Existem três maneiras de sobreviver em um mundo em ruínas. Agora, esqueci alguns, mas uma coisa é certa. O fato de você que está lendo isso agora sobreviver.  」</h1>
             </div>
         </div>
             
